styling af kontakt side

--- a/kontakt.html
+++ b/kontakt.html
@@ -37,7 +37,7 @@
     <main>
 
         <div class="kontaktinfo">
-            <section>
+            <section class="kontakter">
                 <h1>Skal vi tage en snak?</h1>
                 <p>Du behøver ikke være afklaret, inden vi snakker sammen. Vi hjælper dig med at analysere dine behov.</p>
                 <p>E-mail: <a href="mailto:info@storymedia.com">info@storymedia.com</a></p>
@@ -50,7 +50,7 @@
             <img src="img/Chat funktion.png" alt="chat med Story Media">
 
         <div class="kontaktform">
-            <section>
+            <section class="kontaktinformation">
                 <h1>Information</h1>
                 <p>Du er altid mere end velkommen til at kontakte os! </p>
                 <p>Uanset om du er startet som iværksætter eller blot har tanker om din egen virksomhed, så hjælper vi dig gerne med at blive skarpere på markedsføring. Lad os tage en snak om dine ønsker og behov.</p>
