Ændringer til H3 - tyndere og ændringer til ydelser.html

--- a/ydelser.html
+++ b/ydelser.html
@@ -72,14 +72,14 @@
         <!--visuelle pakker-->
         <div class="vispakker-container">
             <article class="vis-et">
-                <h2>Den "lille"</h2>
-                <p>Visuelle identitet</p>
+                <h2 class="h2vispakker">Den "lille"</h2>
+                <p class="pvispakker">Visuelle identitet</p>
                 <ul>
-                    <li>Moodboard</li>
-                    <li>Primær logo</li>
-                    <li>Sekundær logo</li>
-                    <li>Farvepallette</li>
-                    <li>Typografi</li>
+                    <li><h3>Moodboard</h3></li>
+                    <li><h3>Primær logo</h3></li>
+                    <li><h3>Sekundær logo</h3></li>
+                    <li><h3>Farvepallette</h3></li>
+                    <li><h3>Typografi</h3></li>
                 </ul>
                 <div class="kontakt-visuel-container">
                     <p>Pris: 3.650,- ex moms</p>
@@ -88,8 +88,8 @@
             </article>
 
             <article class="vis-to">
-                <h2>Den "store"</h2>
-                <p>Visuelle identitet</p>
+                <h2 class="h2vispakker">Den "store"</h2>
+                <p class="pvispakker">Visuelle identitet</p>
                 <ul>
                     <li>Kreativ brainstorm</li>
                     <li>Moodboards (3 stk)</li>
