--- a/ydelser.html
+++ b/ydelser.html
@@ -82,7 +82,7 @@
                     <li><h3>Typografi</h3></li>
                 </ul>
                 <div class="kontakt-visuel-container">
-                    <p>Pris: 3.650,- ex moms</p>
+                    <p class="pvispris">Pris: 3.650,- ex moms</p>
                     <a class="kontaktvisuel" href="kontakt.html">Kontakt</a>
                 </div>
             </article>
@@ -91,17 +91,17 @@
                 <h2 class="h2vispakker">Den "store"</h2>
                 <p class="pvispakker">Visuelle identitet</p>
                 <ul>
-                    <li>Kreativ brainstorm</li>
-                    <li>Moodboards (3 stk)</li>
-                    <li>Primær logo</li>
-                    <li>Sekundær logo</li>
-                    <li>Farvepallette</li>
-                    <li>Typografi</li>
-                    <li>Skabeloner til some</li>
-                    <li>Visitkort / plakat</li>
+                    <li><h3>Kreativ brainstorm</h3></li>
+                    <li><h3>Moodboards (3 stk)</h3></li>
+                    <li><h3>Primær logo</h3></li>
+                    <li><h3>Sekundær logo</h3></li>
+                    <li><h3>Farvepallette</h3></li>
+                    <li><h3>Typografi</h3></li>
+                    <li><h3>Skabeloner til some</h3></li>
+                    <li><h3>Visitkort / plakat</h3></li>
                 </ul>
                 <div class="kontakt-visuel-container">
-                    <p>Pris: 5.850,- ex moms</p>
+                    <p class="pvispris">Pris: 5.850,- ex moms</p>
                     <a class="kontaktvisuel" href="kontakt.html">Kontakt</a>
                 </div>
             </article>
