Styling af ydelser.html

--- a/ydelser.html
+++ b/ydelser.html
@@ -73,7 +73,7 @@
         <div class="vispakker-container">
             <article class="vis-et">
                 <h2 class="h2vispakker">Den "lille"</h2>
-                <p class="pvispakker">Visuelle identitet</p>
+                <p class="p-opacity-pakker">Visuelle identitet</p>
                 <ul>
                     <li><h3>Moodboard</h3></li>
                     <li><h3>Primær logo</h3></li>
@@ -89,7 +89,7 @@
 
             <article class="vis-to">
                 <h2 class="h2vispakker">Den "store"</h2>
-                <p class="pvispakker">Visuelle identitet</p>
+                <p class="p-opacity-pakker">Visuelle identitet</p>
                 <ul>
                     <li><h3>Kreativ brainstorm</h3></li>
                     <li><h3>Moodboards (3 stk)</h3></li>
@@ -107,6 +107,7 @@
             </article>
         </div>
 
+        <!--Hjemmesidetekst og pakker-->
         <article class="hjemmesidetekst">
             <h2>Skræddersy din hjemmeside</h2>
             <p>Din hjemmeside er dit ansigt udad til kunden. Den skal fange din kundes opmærksomhed gennem din unikke fortælling om din virksomhed.</p>
@@ -117,71 +118,79 @@
         
         <div class="hjemmesidekasse-container">
             <section class="hjemmesidekasse">
-                <h2>Lille</h2>
-                <p>Hjemmeside</p>
-                <h2>12.500,-</h2>
-                <p>Ex. moms</p>
+                <div class="centrerhjemmeside">
+                    <h2 class="h2vispakker">Lille</h2>
+                    <p class="p-opacity-pakker">Hjemmeside</p>
+                    <h2 class="h2vispakker">12.500,-</h2>
+                    <p class="p-opacity-pakker">Ex. moms</p>
+                </div>
                 <div class="linjeydelser"></div>
                 <ul>
-                    <li>4-6 sider</li>
-                    <li>Unik storytelling</li>
-                    <li>Originalt webdesign</li>
-                    <li>1 korrektur af design</li>
-                    <li>Responsivt design tilpasser computer, tablet og mobil</li>
-                    <li>SEO optimeret</li>
+                    <li><p>4-6 sider</p></li>
+                    <li><p><strong>Unik storytelling</strong></p></li>
+                    <li><p>Originalt webdesign</p></li>
+                    <li><p>1 korrektur af design</p></li>
+                    <li><p>Responsivt design tilpasser computer, tablet og mobil</p></li>
+                    <li><p>SEO optimeret</p></li>
                 </ul>
             </section>
             <section class="hjemmesidekasse">
-                <h2>Mellem</h2>
-                <p>Hjemmeside</p>
-                <h2>22.000,-</h2>
-                <p>Ex. moms</p>
+                <div class="centrerhjemmeside">
+                    <h2 class="h2vispakker">Mellem</h2>
+                    <p class="p-opacity-pakker">Hjemmeside</p>
+                    <h2 class="h2vispakker">22.000,-</h2>
+                    <p class="p-opacity-pakker">Ex. moms</p>
+                </div>
                 <div class="linjeydelser"></div>
                 <ul>
-                    <li>7-12 sider</li>
-                    <li>Unik storytelling</li>
-                    <li>Originalt webdesign</li>
-                    <li>2 korrektur gennemgange af design</li>
-                    <li>Responsivt design tilpasser computer, tablet og mobil</li>
-                    <li>SEO optimeret</li>
-                    <li>1 måneds support (opdatering af hjemmeside)</li>
+                    <li><p>7-12 sider</p></li>
+                    <li><p><strong>Unik storytelling</strong></p></li>
+                    <li><p>Originalt webdesign</p></li>
+                    <li><p>2 korrektur gennemgange af design</p></li>
+                    <li><p>Responsivt design tilpasser computer, tablet og mobil</p></li>
+                    <li><p>SEO optimeret</p></li>
+                    <li><p>1 måneds support (opdatering af hjemmeside)</p></li>
                 </ul>
             </section>
             <section class="hjemmesidekasse">
-                <h2>Stor</h2>
-                <p>Hjemmeside</p>
-                <h2>28.000,-</h2>
-                <p>Ex. moms</p>
+                <div class="centrerhjemmeside">
+                    <h2 class="h2vispakker">Stor</h2>
+                    <p class="p-opacity-pakker">Hjemmeside</p>
+                    <h2 class="h2vispakker">28.000,-</h2>
+                    <p class="p-opacity-pakker">Ex. moms</p>
+                </div>
                 <div class="linjeydelser"></div>
                 <ul>
-                    <li>12+ sider</li>
-                    <li>Unik storytelling</li>
-                    <li>Originalt webdesign</li>
-                    <li>2 korrektur gennemgange af design</li>
-                    <li>Responsivt design tilpasser computer, tablet og mobil</li>
-                    <li>SEO optimeret</li>
-                    <li>3 måneders support (opdatering af hjemmeside)</li>
+                    <li><p>12+ sider</p></li>
+                    <li><p><strong>Unik storytelling</strong></p></li>
+                    <li><p>Originalt webdesign</p></li>
+                    <li><p>2 korrektur gennemgange af design</p></li>
+                    <li><p>Responsivt design tilpasser computer, tablet og mobil</p></li>
+                    <li><p>SEO optimeret</p></li>
+                    <li><p>3 måneders support (opdatering af hjemmeside)</p></li>
                 </ul>
             </section>
         </div>
 
         <hr class="seperatorbeige">
 
+        <!--Den specifikke-->
+
         <div  class="specifikke">
             <article class="specifiktekst">
                 <h2>Den specifikke</h2>
                 <p>Har du kun brug for hjælp til specifikke opgaver, er det også en mulighed. Vi har listet nogle af de dele op, som vi ved, der er brug for. </p>
-                <p>Listen er ikke udtømmende - du er velkommen til at kontakte os med lige præcis dit behov.</p>
+                <p class="specafstand">Listen er ikke udtømmende - du er velkommen til at kontakte os med lige præcis dit behov.</p>
                 <ul class="hero-gap-til-knap">
-                    <li>Logo</li>
-                    <li>Bannere</li>
-                    <li>Plakater</li>
-                    <li>Visitkort</li>
-                    <li>Moodboard</li>
-                    <li>Typografi</li>
-                    <li>Farvepalette</li>
-                    <li>Skabeloner til SoMe</li>
-                    <li>Gennemgang af eksisterende website</li>
+                    <li><p>Logo</p></li>
+                    <li><p>Bannere</p></li>
+                    <li><p>Plakater</p></li>
+                    <li><p>Visitkort</p></li>
+                    <li><p>Moodboard</p></li>
+                    <li><p>Typografi</p></li>
+                    <li><p>Farvepalette</p></li>
+                    <li><p>Skabeloner til SoMe</p></li>
+                    <li><p>Gennemgang af eksisterende website</p></li>
                 </ul>
                 <a class="kontakt" href="kontakt.html">Kontakt os for pris</a>
             </article>
