Styling til brandingproces.html

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -7,13 +7,35 @@
     <link rel="stylesheet" href="css/global.css">
     <title>Forside</title>
 </head>
-<body>
-    <header id="tiltopbranding">
+<body class="BGbillede-ydelser">
 
-
+    <header class="header1" id="tiltopbranding">
+        <a href="index.html"><img src="img/Logo - ikon+tekst på linje.png" alt="Story Media logo" class="headerlogo"></a>
+        <nav>
+            <ul>
+            <li><a href="kontakt.html"><img src="img/mail ikon.png" alt="kontakt icon" class="kontaktikon"></a></li>
+            <li><div class="sogefelt"><img src="img/søg ikon.png" alt="søgefelt" class="sog"></div></li>
+            </ul>
+        </nav>      
+    </header>
+    <header class="header2">
+        <nav>
+            <ul>
+                <li class="dropdown">
+                    <h1 class="menu">MENU</h1>
+                    <ul class="dropdown-menu">
+                        <li><a href="ydelser.html">Ydelser</a></li>
+                        <li><a href="branding-proces.html">Branding proces</a></li>
+                        <li><a href="storytelling.html">Storytelling</a></li>
+                        <li><a href="om-story-media.html">Om Story Media</a></li>
+                        <li><a href="kontakt.html">Kontakt</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
     </header>
     
-    <main class="branding-main">
+    <main>
         
         <div class="hero-container">    
             <article class="hero-tekst">
@@ -22,7 +44,7 @@
                 <p class="hero-gap-til-knap">Vores proces sikrer dig et professionelt resultat. Få et indblik i processen herunder.</p>
                 <a href="kontakt.html">Kontakt os</a>
             </article>
-            <div class="hero-img">
+            <div class="hero-img brandingimgtop">
                 <img  src="img/Illustration - branding proces top.png" alt="Illustration af computer">
             </div>
         </div>
