Styling til brandingproces.html og padding-bottom på h3

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -39,7 +39,7 @@
         
         <div class="hero-container">    
             <article class="hero-tekst">
-                <h1>Branding proces one on one</h1>
+                <h1>Branding proces - one on one</h1>
                 <p>At skabe den visuelle del af dit brand, kræver research, analyse og kreativitet.</p>
                 <p class="hero-gap-til-knap">Vores proces sikrer dig et professionelt resultat. Få et indblik i processen herunder.</p>
                 <a href="kontakt.html">Kontakt os</a>
@@ -59,15 +59,15 @@
        
         <div class="branding-container-venstre">
             <section class="branding-tekst-bokse-venstre" >
-                <h2>Hvad gør din virksomhed unik?</h2>
+                <h3>Hvad gør din virksomhed unik?</h3>
                 <p>Vi analyserer og laver research</p>
                 <ul>
-                    <li>din unikke historie</li>
-                    <li>styrker og svagheder</li>
-                    <li>konkurrence</li>
-                    <li>brand position</li>
-                    <li>value proposition</li>
-                    <li>unique selling point</li>
+                    <li><p>din unikke historie</p></li>
+                    <li><p>styrker og svagheder</li>
+                    <li><p>konkurrence</p></li>
+                    <li><p>brand position</p></li>
+                    <li><p>value proposition</p></li>
+                    <li><p>unique selling point</p></li>
                 </ul>
             </section>
             <div class="branding-img-bokse-venstre">
@@ -77,13 +77,13 @@
 
         <div class="branding-container-hojre">
             <section class="branding-tekst-bokse-hojre">
-                <h2>Hvem er den perfekte kunde?</h2>
+                <h3>Hvem er den perfekte kunde?</h3>
                 <p>Vi finder din perfekte kunde, så du kan målrette din markedsføring</p>
                 <ul>
-                    <li>målgruppe</li>
-                    <li>persona</li>
-                    <li>sprog</li>
-                    <li>SMUK modellen</li>
+                    <li><p>målgruppe</p></li>
+                    <li><p>persona</p></li>
+                    <li><p>sprog</p></li>
+                    <li><p>SMUK modellen</p></li>
                 </ul>
             </section>
             <div class="branding-img-bokse-hojre">
@@ -93,14 +93,14 @@
 
         <div class="branding-container-venstre">
             <section class="branding-tekst-bokse-venstre">
-                <h2>Visuel identitet</h2>
+                <h3>Visuel identitet</h3>
                 <p>Vi finder i samarbejde frem til farver og design, der giver den helt rigtige følelse af dit brand.</p>
                 <ul>
-                    <li>moodboard</li>
-                    <li>farvepalette</li>
-                    <li>logo</li>
-                    <li>grafisk design</li>
-                    <li>website</li>
+                    <li><p>moodboard</p></li>
+                    <li><p>farvepalette</p></li>
+                    <li><p>logo</p></li>
+                    <li><p>grafisk design</p></li>
+                    <li><p>website</p></li>
                 </ul>
             </section>
             <div class="branding-img-bokse-venstre">
@@ -110,13 +110,13 @@
 
         <div class="branding-container-hojre">
             <section class="branding-tekst-bokse-hojre">
-                <h2>Markedsføring</h2>
+                <h3>Markedsføring</h3>
                 <p>Vi sammensætter en markeds-føringsstrategi sammen med dig som både er effektiv og realistisk.</p>
                 <ul>
-                    <li>strategi</li>
-                    <li>bannere</li>
-                    <li>plakater</li>
-                    <li>SoMe</li>
+                    <li><p>strategi</p></li>
+                    <li><p>bannere</p></li>
+                    <li><p>plakater</p></li>
+                    <li><p>SoMe</p></li>
                 </ul>
             </section>
             <div class="branding-img-bokse-hojre">
