--- a/faq.html
+++ b/faq.html
@@ -32,6 +32,7 @@
                 </li>
             </ul>
         </nav>
+        <p class="brodkrommebrand">/ FAQ</p>
     </header>
     
     <main>
