--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 </li>
             </ul>
         </nav>
+        <p class="brodkrommebrand">/ Forside</p>
     </header>
     
     <main>
