--- a/kontakt.html
+++ b/kontakt.html
@@ -32,6 +32,7 @@
                 </li>
             </ul>
         </nav>
+        <p class="brodkrommebrand">/ Kontakt</p>
     </header>
     
     <main>
