--- a/ydelser.html
+++ b/ydelser.html
@@ -42,26 +42,26 @@
     
     <main class="ydelsermain">
 
-        <div class="hero-container-ydelse">
-            <article class="hero-tekst-ydelse">
+        <div class="hero-container">
+            <article class="hero-tekst">
                 <h1>Vi har en løsning til dit behov</h1>
                 <p class="hero-gap-til-knap">Uanset om du er klar til den fulde brandingpakke eller blot har brug for en løsning på en specifik opgave, så kan vi hjælpe.</p>
                 <a href="#">Gå til pakkerne</a>
             </article>
-            <div class="hero-img-ydelse">
+            <div class="hero-img">
                 <img src="img/illustration - ydelser.png" alt="Illustration af pige på kontor">
             </div>
         </div>
 
         <!--Chevron-->
         
-        <div class="chevron-container-ydelse">
-            <img src="img/Chevron.png" alt="Pil ned">
+        <div class="chevron-container">
+            <img class="chevron" src="img/Chevron.png" alt="Pil ned">
        </div>
 
        <!--Hovedindhold-->
 
-       <div class="stark-container-ydelse">
+       <div class="stark-container">
             <img src="img/Visuelidentitet.png" alt="Billede af postkort">
 
             <article>
@@ -75,7 +75,7 @@
         </div>
 
         <!--visuelle pakker-->
-        <div class="vispakker-container-ydelse">
+        <div class="vispakker-container">
             <article class="vis-et">
                 <h2 class="h2vispakker">Den "lille"</h2>
                 <p class="p-opacity-pakker">Visuelle identitet</p>
