Begyndende styling af storytelling.html

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -53,7 +53,7 @@
         <!--Chevron-->
         
         <div class="chevron-container">
-             <img class="chevron" src="img/Chevron.png" alt="Pil ned">
+             <img src="img/Chevron.png" alt="Pil ned">
         </div>
        
         <!--Hovedindhold-->
