--- a/storytelling.html
+++ b/storytelling.html
@@ -53,16 +53,19 @@
         <!--Chevron-->
         
         <div class="chevron-container">
-            <img class="chevron" src="img/Chevron.png" alt="Pil ned">
+            <img src="img/Chevron.png" alt="Pil ned">
        </div>
 
         <!--Hovedindhold-->
-
-       <h2>hvad er storytelling</h2>
-       <p>Storytelling er markedsføring på en autentisk, relevant og relationsskabende måde. Mennesker har fortalt historier omkring bålstedet siden urtiden. Det er en indlevende og relaterbar måde at formidle din virksomheds virke og produkter på.</p>
-       <p>Storytelling er din fortælling om, hvorfor din virksomhed eksisterer - din virksomheds WHY. Som oftest er det bundet op på livserfaringer, passion og skaberkraft, så der er altid nogle spændende byggesten til en storytelling i din iværksætterrejse. </p>
-       <p>Storytelling bygges både op omkring fortid, nutid og fremtid. Derfor vil redskabet være relevant kontinuerligt i dit arbejde med branding af din virksomhed.</p>
-       <img src="img/baalsted.png" alt="Baalsted">
+        <div class="hvad-er-storytelling">
+       <article>
+            <h2>hvad er storytelling</h2>
+            <p>Storytelling er markedsføring på en autentisk, relevant og relationsskabende måde. Mennesker har fortalt historier omkring bålstedet siden urtiden. Det er en indlevende og relaterbar måde at formidle din virksomheds virke og produkter på.</p>
+            <p>Storytelling er din fortælling om, hvorfor din virksomhed eksisterer - din virksomheds WHY. Som oftest er det bundet op på livserfaringer, passion og skaberkraft, så der er altid nogle spændende byggesten til en storytelling i din iværksætterrejse. </p>
+            <p>Storytelling bygges både op omkring fortid, nutid og fremtid. Derfor vil redskabet være relevant kontinuerligt i dit arbejde med branding af din virksomhed.</p>
+        </article>
+            <img src="img/baalsted.png" alt="Baalsted">
+        </div>
 
        <article>
             <h2>hvorfor storytelling</h2>
