--- a/ydelser.html
+++ b/ydelser.html
@@ -56,7 +56,7 @@
         <!--Chevron-->
         
         <div class="chevron-container">
-            <img class="chevron" src="img/Chevron.png" alt="Pil ned">
+            <img src="img/Chevron.png" alt="Pil ned">
        </div>
 
        <!--Hovedindhold-->
