--- a/storytelling.html
+++ b/storytelling.html
@@ -67,7 +67,7 @@
             <img src="img/baalsted.png" alt="Baalsted">
         </div>
 
-       <article>
+       <article class="hvorfor-storytelling">
             <h2>hvorfor storytelling</h2>
             <p>Når vi med storytelling fortæller om mennesket bag virksomheden, forbinder kunden sig til dit brand på et emotionelt plan. Det styrker dine kunderelationer og betyder i sidste ende større konvertering.</p>
             <p>Med storytelling får du </p>
