Styling af storytelling.html

--- a/storytelling.html
+++ b/storytelling.html
@@ -72,15 +72,15 @@
             <p>Når vi med storytelling fortæller om mennesket bag virksomheden, forbinder kunden sig til dit brand på et emotionelt plan. Det styrker dine kunderelationer og betyder i sidste ende større konvertering.</p>
             <p>Med storytelling får du </p>
             <ul>
-                <li>Øget troværdighed overfor dine kunder og dermed tillid til, at dine produkter kan tilfredsstille et behov.</li>
-                <li>Øget brandawareness fordi du skiller dig ud og giver dit brand værdi.</li>
-                <li>Længere besøgstid på din hjemmeside, fordi din visuelle identitet og sproget holder kunden fanget positivt. Det er positivt for SEO optimering.</li>
-                <li>Større sandsynlighed for at kunderne husker dig og din virksomhed. Storytelling gør indholdet af din branding relaterbart, vækker følelser og behovet for dit produkt øges.</li>
+                <li><strong>Øget troværdighed</strong> overfor dine kunder og dermed tillid til, at dine produkter kan tilfredsstille et behov.</li>
+                <li><strong>Øget brandawareness</strong> fordi du skiller dig ud og giver dit brand værdi.</li>
+                <li><strong>Længere besøgstid på din hjemmeside</strong>, fordi din visuelle identitet og sproget holder kunden fanget positivt. Det er positivt for SEO optimering.</li>
+                <li>Større sandsynlighed for at <strong>kunderne husker dig</strong> og din virksomhed. Storytelling gør indholdet af din branding relaterbart, vækker følelser og behovet for dit produkt øges.</li>
             </ul>
             <a href="ydelser.html">Se vores ydelser</a>
         </article>
 
-       <article>
+       <article class="case">
             <h2>case</h2>
             <p>Mads kom til Story Media med ønsket om at brande sig selv med storytelling. Få et indblik i vores samarbejde i casebeskrivelsen herunder.</p>
        </article>
