--- a/storytelling.html
+++ b/storytelling.html
@@ -80,13 +80,13 @@
             <a href="ydelser.html">Se vores ydelser</a>
         </article>
 
-       <article class="case">
+        <article class="case">
             <h2>case</h2>
             <p>Mads kom til Story Media med ønsket om at brande sig selv med storytelling. Få et indblik i vores samarbejde i casebeskrivelsen herunder.</p>
        </article>
 
         <div class="storytekstbillede">
-            <article class="storytekst">
+            <article>
                 <p>Drømmen</p>
                 <h2>Vaser i træ</h2>
                 <p>Mads kontaktede Story Media med ønsket om at gøre alvor af hans drøm om, at kunne leve af hans hobby som trædrejer. </p>
