små rettelser - variabler ændret

--- a/faq.html
+++ b/faq.html
@@ -44,19 +44,26 @@
                 <p>Find svarene i vores Q&A. </p>
             
              <!--dropdown menu-->
-                <div class="faq-dropdown">
-                    <button class="dropdown-btn">Vælg et spørgsmål <img src="img/Chevron.png" class="pilned"></button>
-                        <div class="dropdown-content">
-                            <a href="faq.html#1">Hvad er branding?</a>
-                            <a href="faq.html#2">Hvad er Brand position?</a>
-                            <a href="faq.html#3">Hvad er Storytelling?</a>
-                            <a href="faq.html#4">Hvad er visuel identitet?</a>
-                            <a href="faq.html#5">Hvad betyder value proposition?</a>
-                            <a href="faq.html#6">Hvad betyder Unique Selling Point?</a>
-                            <a href="faq.html#7">Hvorfor skal jeg have en persona?</a>
-                            <a href="faq.html#8">Hvad er et moodboard?</a>
+             <nav>
+                <ul>
+                    <li class="faq-dropdown">
+                        <div class="dropdown-box">
+                        <p>Vælg et spørgsmål</p>
+                        <img src="img/pilned.png" alt="">
                         </div>
-                </div>
+                        <ul class="faq-dropdown-menu">
+                            <li><a href="faq.html#1">Hvad er branding?</a></li>
+                            <li><a href="faq.html#2">Hvad er brand position?</a></li>
+                            <li><a href="faq.html#3">Hvad er storytelling?</a></li>
+                            <li><a href="faq.html#4">Hvad er visuel identitet?</a></li>
+                            <li><a href="faq.html#5">Hvad betyder value proposition?</a></li>
+                            <li><a href="faq.html#6">Hvad betyder Unique Selling Point?</a></li>
+                            <li><a href="faq.html#7">Hvorfor skal jeg have en persona?</a></li>
+                            <li><a href="faq.html#8">Hvad er et moodboard?</a></li></li>
+                        </ul>
+                    </li>
+                </ul>
+             </nav>
             </article>
             
             <div class="kontakt-hero-img">
