små rettelser til hero, kanpper + brødkrumme

--- a/faq.html
+++ b/faq.html
@@ -32,7 +32,7 @@
                 </li>
             </ul>
         </nav>
-        <p class="brodkrommebrand">/ FAQ</p>
+        <p class="brodkromme">/FAQ</p>
     </header>
     
     <main>         
@@ -41,8 +41,8 @@
             <article class="hero-tekst">
                 <h1>FAQ</h1>
                 <p>Er du i tvivl om, hvad det præcist er, vi tilbyder?</p>
-                <p class="hero-gap-til-knap">Er du faret vild i ord som branding, value proposition og persona?</p>
-                <p>Find svarene i vores Q&A. </p>
+                <p>Er du faret vild i ord som branding, value proposition og persona?</p>
+                <p class="hero-gap-til-knap">Find svarene i vores Q&A. </p>
                
                  <!--dropdown menu-->
              <nav>
@@ -53,14 +53,14 @@
                         <img src="img/pilned.png" alt="">
                         </div>
                         <ul class="faq-dropdown-menu">
-                            <li><a href="faq.html#1" class="text">Hvad er branding?</a></li>
-                            <li><a href="faq.html#2" class="text">Hvad er brand position?</a></li>
-                            <li><a href="faq.html#3" class="text">Hvad er storytelling?</a></li>
-                            <li><a href="faq.html#4" class="text">Hvad er visuel identitet?</a></li>
-                            <li><a href="faq.html#5" class="text">Hvad betyder value proposition?</a></li>
-                            <li><a href="faq.html#6" class="text">Hvad betyder Unique Selling Point?</a></li>
-                            <li><a href="faq.html#7" class="text">Hvorfor skal jeg have en persona?</a></li>
-                            <li><a href="faq.html#8" class="text">Hvad er et moodboard?</a></li></li>
+                            <li><a href="faq.html#1">Hvad er branding?</a></li>
+                            <li><a href="faq.html#2">Hvad er brand position?</a></li>
+                            <li><a href="faq.html#3">Hvad er storytelling?</a></li>
+                            <li><a href="faq.html#4">Hvad er visuel identitet?</a></li>
+                            <li><a href="faq.html#5">Hvad betyder value proposition?</a></li>
+                            <li><a href="faq.html#6">Hvad betyder Unique Selling Point?</a></li>
+                            <li><a href="faq.html#7">Hvorfor skal jeg have en persona?</a></li>
+                            <li><a href="faq.html#8">Hvad er et moodboard?</a></li></li>
                         </ul>
                     </li>
                 </ul>
@@ -127,7 +127,7 @@
         </section>
         <section class="faq-box1">
             <h2>Fik du ikke svar på dit spørgsmål?</h2>
-            <p>Der er mange fagudtryk i vores branche. Hvis du stadig forsøger at finde svar, for at blive afklaret på værdien af marketing for din virksomhed, så kontakt os gerne. På den måde kan vi optimere vores FAQ og i dialogen med dig finde frem til, hvilke fordele der vil være for din virksomhed.</p>
+            <p class="hero-gap-til-knap">Der er mange fagudtryk i vores branche. Hvis du stadig forsøger at finde svar, for at blive afklaret på værdien af marketing for din virksomhed, så kontakt os gerne. På den måde kan vi optimere vores FAQ og i dialogen med dig finde frem til, hvilke fordele der vil være for din virksomhed.</p>
             <a href="kontakt.html" class="knap">Kontakt os</a>
         </section>
 
