--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </li>
             </ul>
         </nav>
-        <p class="brodkrommebrand">/ Forside</p>
+        <p class="brodkromme">/Forside</p>
     </header>
     
     <main>
