--- a/kontakt.html
+++ b/kontakt.html
@@ -32,7 +32,7 @@
                 </li>
             </ul>
         </nav>
-        <p class="brodkrommebrand">/ Kontakt</p>
+        <p class="brodkromme">/Kontakt</p>
     </header>
     
     <main>
@@ -41,8 +41,10 @@
         <article class="hero-tekst">
             <h1>Skal vi tage en snak?</h1>
             <p>Du behøver ikke være afklaret, inden vi snakker sammen. Vi hjælper dig med at analysere dine behov.</p>
+            <div class="text">
             <p>E-mail: <a href="mailto:info@storymedia.com" class="text">info@storymedia.com</a></p>
             <p>Telefon: <a href="tel:+4599999999" class="text">+45 99 99 99 99</a></p>
+            </div>
         </article>
         <div class="hero-img imgtop">
             <img  src="img/illustration - kontakt m. orange.png" alt="Illustration af en person der sidder klar ved telefon og mail">
