--- a/om-story-media.html
+++ b/om-story-media.html
@@ -32,7 +32,7 @@
                 </li>
             </ul>
         </nav>
-        <p class="brodkrommebrand">/ Om Story Media</p>
+        <p class="brodkromme">/Om Story Media</p>
     </header>
     
     <main>
