--- a/storytelling.html
+++ b/storytelling.html
@@ -33,7 +33,7 @@
                 </li>
             </ul>
         </nav>
-        <p class="brodkrommebrand">/ storytelling</p>
+        <p class="brodkromme">/Storytelling</p>
     </header>
     
     <main>
