--- a/branding-proces.html
+++ b/branding-proces.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/global.css">
     <title>Forside</title>
 </head>
-<body class="BGandre">
+<body class="BGbranding">
 
     <header class="header1" id="tiltop">
         <a href="index.html"><img src="img/Logo - ikon+tekst på linje.png" alt="Story Media logo" class="headerlogo"></a>
@@ -33,7 +33,7 @@
                 </li>
             </ul>
         </nav>
-        <p class="brodkrommebrand">/ branding proces</p>
+        <p class="brodkromme">/Branding proces</p>
     </header>
     
     <main>
