--- a/ydelser.html
+++ b/ydelser.html
@@ -35,7 +35,7 @@
                 </li>
             </ul>
         </nav>
-        <p class="brodkromme">/ ydelser</p>
+        <p class="brodkromme">/Ydelser</p>
     </header>
  
     <main>
