forside html tilføjet + insta billeder/"opslag"

--- a/index.html
+++ b/index.html
@@ -59,6 +59,129 @@
         <img src="img/Chat funktion.png" alt="chat med Story Media">
     </div>
 
+    <!-- Branding video-->
+    <div class="brandingvideo">
+    <h4>Det handler ikke om os</h4>
+    <h2>Du er i centrum</h2>
+
+    <video src="#"></video>
+    </div>
+
+    <!--intro/informationstekst-->
+    <div class="intro">
+        <h2>Brand dit håndværk med storytelling</h2>
+            <p>Hos Story Media har vi fokus på storytelling og det er der en god grund til. Mennesker elsker en god historie, der aktiverer deres følelsesregister og forestillingsevner.</p>
+
+        <h3>Et studie viser, at kun 5% husker fakta og statistik, mens hele</h3> <h3 class="orange">60% husker en fortælling.</h3>
+
+        <p>Gennem</p>
+        <p class="fed-orange">storytelling</p>
+        <p>om din virksomhed skaber vi:</p>
+
+        <ul>
+            <li>autentisk og relaterbart content i øjenhøjde</li>
+            <li>og dermed en relation mellem dit brand og din kunde</li>
+        </ul>
+
+        <p>Og</p>
+        <p class="fed-orange">gevinsten</p>
+        <p>er blandt andet:</p>
+
+        <ul>
+            <li>Du skiller dig ud</li>
+            <li>Øget brandawareness</li>
+            <li>Større brugerengagement</li>
+            <li>Værdiskabelse for din målgruppe</li>
+            <li>Loyale kunder</li>
+            <li>Stærkere markedspositionering</li>
+            <li>Mere trafik og længere besøgstid på din virksomheds hjemmeside og dermed forstærket SEO</li>
+        </ul>
+    </div>
+
+    <!--tekst og billede sektioner-->
+    <section class="text-img-section">
+        <div class="foto">
+            <img src="img/forside - ler.png" alt="En person der arbejder med ler">
+        </div>
+        <div class="txt">
+            <h2>Storytelling</h2>
+            <p>Vi er specialister i storytelling.</p>  
+
+            <p>Din virksomhed har en unik historie og det er vores fornemste opgave at hjælpe dig med at fortælle den, skille dig ud og fange lige præcis din kunde.</p>
+
+            <p class="hero-gap-til-knap">Læs om storytelling og om hvordan vi hjalp Mads fra Wood Design med at komme i mål med hans virksomheds visuelle identitet</p>
+
+            <a class="knap" href="storytelling.html">Læs om storytelling</a>
+        </div>
+    </section>
+
+    <section class="text-img-section">
+        <div class="txt">
+            <h2>branding proces</h2>
+            <p>Vi gør os umage. </p>  
+
+            <p>Vores løsninger er baseret på research og analyse såvel som kreativitet. </p>
+
+            <p class="hero-gap-til-knap">Kombinationen sikrer dig et professionelt resultat målrettet din historie, dit håndværk og din drøm.</p>
+
+            <a class="knap" href="branding-proces.html">Gå til brandingproces</a>
+        </div>
+        <div class="foto">
+            <img src="img/forside - smykker.png" alt="Person der sidder og laver en ring">
+        </div>
+    </section>
+
+    <section class="text-img-section">
+        <div class="foto">
+            <img src="img/forside - blomst.png" alt="">
+        </div>
+        <div class="txt">
+            <h2>Vi tilbyder</h2>
+            <h3>Visuel identitet</h3>
+            <h3>Hjemmeside</h3>
+            <h3>Visitkort</h3>
+            <h3>Bannere</h3>
+            <h3>Plakater</h3>
+            <h3 class="hero-gap-til-knap">Logo</h3>
+
+            <a class="knap" href="ydelser.html">Gå til ydelser</a>
+        </div>
+    </section>
+
+    <section class="text-img-section">
+        <div class="txt">
+            <h2>Vi er story media</h2>
+            <p>Når du bestiller en ydelse gennem Story Media er det Elisabeth og Maja, du kommer til at møde. </p>  
+
+            <p>Vi er begge uddannet multimediedesignere og er efter uddannelsen gået i forskellige retninger. </p>
+
+            <p class="hero-gap-til-knap">3 år efter uddannelseslivet er vi nu et team med flere forskellige kompetencer og vores mål er at hjælpe dig med at brande din virksomhed bedst muligt. </p>
+
+            <a class="knap" href="om-story-media.html">Læs vores historie</a>
+        </div>
+        <div class="foto">
+            <img src="img/Logo - ikon.png" alt="Story Medias logo ikon">
+        </div>
+    </section>
+
+<!-- Instagram karrusel -->
+
+<div class="karrusel">
+    <h3>Følg os for tips og gode råd</h3>
+    <div class="slider"><img src="img/insta7.png" alt="indslag fra instragram"></div>
+    <div class="slider"><img src="img/insta2.png" alt="indslag fra instragram"></div>
+    <div class="slider"><img src="img/insta3.png" alt="indslag fra instragram"></div>
+    <div class="slider"><img src="img/insta4.png" alt="indslag fra instragram"></div>
+    <div class="slider"><img src="img/insta5.png" alt="indslag fra instragram"></div>
+    <div class="slider"><img src="img/insta6.png" alt="indslag fra instragram"></div>
+    <div class="slider"><img src="img/insta1.png" alt="indslag fra instragram"></div>
+</div>
+
+
+
+
+
+
 
 
     <a class="pilop" href="#tiltop"> <img class="pilopimg" src="img/pil op.png" alt="Pil til toppen"></a>
